TATB : Fix sidebar flickering issue

--- a/src/app/component/footer/footer.component.scss
+++ b/src/app/component/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: 5px;
-  position: relative;
+  position: absolute;
   background-color: white;
   width: 100%;
   text-align: center;
